--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,7 @@
 	box-sizing: border-box;
 }
 
-body {
+body {    
 	width: 100%;
 	min-height: 100vh;
 	border: none;
@@ -22,8 +22,10 @@ body {
 */
 
 header {
-	margin: 5px;
+    position: fixed;
+    width: calc(100% - 10px);
 	border-radius: 5px;
+    margin: 5px;
 	background: #051118;
 	box-shadow: 5px 5px 15px #05111880, 5px 5px 25px #05111880, -5px -5px 15px #05111840;
 
