--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,9 +6,6 @@
 }
 
 body {
-  width: 100%;
-  min-height: 100vh;
-  border: none;
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
   font-weight: 400;
@@ -77,8 +74,12 @@ header nav ul li a:hover, header nav ul li a.active {
   color: #18e77c;
 }
 
-header nav ul li a .fa {
+header nav ul li a .icon {
   font-size: 18px;
   margin-bottom: 5px;
+}
+
+header nav ul li a * {
+  pointer-events: none;
 }
 /*# sourceMappingURL=main.css.map */
