--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,10 +4,7 @@
 	box-sizing: border-box;
 }
 
-body {    
-	width: 100%;
-	min-height: 100vh;
-	border: none;
+body {
 	font-family: 'Poppins', sans-serif;
 	font-size: 14px;
 	font-weight: 400;
@@ -22,10 +19,10 @@ body {
 */
 
 header {
-    position: fixed;
-    width: calc(100% - 10px);
+	position: fixed;
+	width: calc(100% - 10px);
 	border-radius: 5px;
-    margin: 5px;
+	margin: 5px;
 	background: #051118;
 	box-shadow: 5px 5px 15px #05111880, 5px 5px 25px #05111880, -5px -5px 15px #05111840;
 
@@ -58,9 +55,13 @@ header {
 						color: #18e77c;
 					}
 
-					.fa {
+					.icon {
 						font-size: 18px;
 						margin-bottom: 5px;
+					}
+
+					*{
+						pointer-events: none;
 					}
 				}
 			}
