--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,10 +18,43 @@ body {
 /*
 	1. Preloader
 */
+.preloader {
+  background: #051118;
+  z-index: 1000;
+  opacity: 1;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.preloader.hide {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.preloader .spinner > [class^='double'] {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  opacity: 1;
+  background: #18e77c;
+  -webkit-animation: sk-bounce 2s infinite ease-in-out;
+          animation: sk-bounce 2s infinite ease-in-out;
+}
+
+.preloader .spinner .double-bounce2 {
+  -webkit-animation-delay: -1s;
+          animation-delay: -1s;
+  opacity: 0.1;
+}
+
 /*
     2. Navbar
 */
 .navbar {
+  z-index: 900;
   width: calc(100% - 12px);
   background: #051118;
   -webkit-box-shadow: 5px 5px 15px #05111880, 5px 5px 25px #05111880, -5px -5px 15px #05111840;
@@ -63,5 +96,31 @@ body {
 
 .navbar nav ul li a * {
   pointer-events: none;
+}
+
+/*
+	*. Animations
+*/
+@-webkit-keyframes sk-bounce {
+  0%,
+  100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+@keyframes sk-bounce {
+  0%,
+  100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
 }
 /*# sourceMappingURL=main.css.map */
