--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,11 +18,43 @@ body {
 	1. Preloader
 */
 
+.preloader {
+	background: #051118;
+	z-index: 1000;
+	opacity: 1;
+	transition: 1s;
+
+	&.hide{
+		opacity: 0;
+		pointer-events: none;
+	}
+
+	.spinner {
+		& > [class^='double'] {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			border-radius: 50%;
+			opacity: 1;
+			background: #18e77c;
+			animation: sk-bounce 2s infinite ease-in-out;
+		}
+
+		.double-bounce2 {
+			animation-delay: -1s;
+			opacity: 0.1;
+		}
+	}
+}
+
 /*
     2. Navbar
 */
 
 .navbar {
+	z-index: 900;
 	width: calc(100% - 12px);
 	background: #051118;
 	box-shadow: 5px 5px 15px #05111880, 5px 5px 25px #05111880, -5px -5px 15px #05111840;
@@ -55,5 +87,20 @@ body {
 				pointer-events: none;
 			}
 		}
+	}
+}
+
+/*
+	*. Animations
+*/
+
+@keyframes sk-bounce {
+	0%,
+	100% {
+		transform: scale(0);
+	}
+
+	50% {
+		transform: scale(1);
 	}
 }
