--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,18 +1,36 @@
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
+/*
+	1. General
+*/
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji' !important;
   font-size: 14px;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
   color: #ffffff8c;
   background: #071720;
+}
+
+.modern-arrow {
+  position: relative;
+}
+
+.modern-arrow, .modern-arrow::before {
+  display: inline-block;
+  background: #ffffffda;
+  width: 14px;
+  height: 2px;
+}
+
+.modern-arrow::before {
+  content: '';
+  position: absolute;
+  bottom: 3px;
+  right: 0;
+  width: 8px;
+  height: 2px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
 /*
@@ -57,8 +75,8 @@ body {
   z-index: 900;
   width: calc(100% - 12px);
   background: #051118;
-  -webkit-box-shadow: 5px 5px 15px #05111880, 5px 5px 25px #05111880, -5px -5px 15px #05111840;
-          box-shadow: 5px 5px 15px #05111880, 5px 5px 25px #05111880, -5px -5px 15px #05111840;
+  -webkit-box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840;
+          box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840;
 }
 
 .navbar nav ul li a {
@@ -82,8 +100,9 @@ body {
   font-weight: 500;
   width: 55px;
   height: 75px;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
+  @apply transition;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
 }
 
 .navbar nav ul li a:hover, .navbar nav ul li a.active {
@@ -96,6 +115,107 @@ body {
 
 .navbar nav ul li a * {
   pointer-events: none;
+}
+
+/*
+	3. Home Card
+*/
+.home-card {
+  height: 500px;
+  background: #051118;
+  -webkit-box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840;
+          box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840;
+}
+
+.home-card .background-image {
+  height: 45%;
+}
+
+.home-card .background-image img {
+  -webkit-clip-path: polygon(100% 0, 100% 85%, 60% 100%, 0 75%, 0 0);
+          clip-path: polygon(100% 0, 100% 85%, 60% 100%, 0 75%, 0 0);
+}
+
+.home-card .profile-image {
+  top: 45%;
+  --tw-translate-y: -45%;
+  width: 125px;
+  height: 125px;
+}
+
+.home-card .profile-image img {
+  border-color: #051118;
+}
+
+.home-card .profile-image::before {
+  content: '';
+  position: absolute;
+  top: 10px;
+  left: -10px;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: linear-gradient(135deg, #18e77c66, #18e77c1a);
+}
+
+.home-card .name {
+  color: #ffffffd9;
+}
+
+.home-card .name h1 {
+  line-height: 30px;
+}
+
+.home-card .occupation h2 {
+  color: #18e77c;
+}
+
+.home-card .social a {
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+}
+
+.home-card .social a:hover {
+  color: #ffffffd9;
+}
+
+.home-card .social a .icon {
+  font-size: 16px;
+}
+
+.home-card .links::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: -webkit-gradient(linear, left top, right top, from(#ffffff0d), color-stop(#ffffff8c), to(#ffffff0d));
+  background: linear-gradient(to right, #ffffff0d, #ffffff8c, #ffffff0d);
+}
+
+.home-card .links::after {
+  content: '';
+  position: absolute;
+  top: 1px;
+  left: 50%;
+  width: 0.5px;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, from(#ffffff8c), to(#ffffff0d));
+  background: linear-gradient(to bottom, #ffffff8c, #ffffff0d);
+}
+
+.home-card .links a {
+  color: #ffffffda;
+  line-height: 70px;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+}
+
+.home-card .links a:hover {
+  color: #18e77c;
 }
 
 /*
