--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,17 +1,38 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
+/*
+	1. General
+*/
 
 body {
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
+		'Apple Color Emoji', 'Segoe UI Emoji' !important;
 	font-size: 14px;
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-size-adjust: 100%;
 	color: #ffffff8c;
 	background: #071720;
+}
+
+.modern-arrow {
+	position: relative;
+
+	&,
+	&::before {
+		display: inline-block;
+		background: #ffffffda;
+		width: 14px;
+		height: 2px;
+	}
+
+	&::before {
+		content: '';
+		position: absolute;
+		bottom: 3px;
+		right: 0;
+		width: 8px;
+		height: 2px;
+		transform: rotate(45deg);
+	}
 }
 
 /*
@@ -24,7 +45,7 @@ body {
 	opacity: 1;
 	transition: 1s;
 
-	&.hide{
+	&.hide {
 		opacity: 0;
 		pointer-events: none;
 	}
@@ -57,7 +78,7 @@ body {
 	z-index: 900;
 	width: calc(100% - 12px);
 	background: #051118;
-	box-shadow: 5px 5px 15px #05111880, 5px 5px 25px #05111880, -5px -5px 15px #05111840;
+	box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840;
 
 	nav ul li {
 		a {
@@ -72,7 +93,8 @@ body {
 			font-weight: 500;
 			width: 55px;
 			height: 75px;
-			transition: 0.3s;
+			@apply transition;
+			transition-duration: 0.3s;
 
 			&:hover,
 			&.active {
@@ -85,6 +107,105 @@ body {
 
 			* {
 				pointer-events: none;
+			}
+		}
+	}
+}
+
+/*
+	3. Home Card
+*/
+
+.home-card {
+	height: 500px;
+	background: #051118;
+	box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840;
+
+	.background-image {
+		height: 45%;
+
+		img {
+			clip-path: polygon(100% 0, 100% 85%, 60% 100%, 0 75%, 0 0);
+		}
+	}
+
+	.profile-image {
+		top: 45%;
+		--tw-translate-y: -45%;
+		width: 125px;
+		height: 125px;
+
+		img {
+			border-color: #051118;
+		}
+
+		&::before {
+			content: '';
+			position: absolute;
+			top: 10px;
+			left: -10px;
+			width: 100%;
+			height: 100%;
+			border-radius: 50%;
+			background: linear-gradient(135deg, #18e77c66, #18e77c1a);
+		}
+	}
+
+	.name {
+		color: #ffffffd9;
+
+		h1 {
+			line-height: 30px;
+		}
+	}
+
+	.occupation {
+		h2 {
+			color: #18e77c;
+		}
+	}
+
+	.social a {
+		transition-duration: 0.3s;
+
+		&:hover {
+			color: #ffffffd9;
+		}
+
+		.icon {
+			font-size: 16px;
+		}
+	}
+
+	.links {
+		&::before {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 1px;
+			background: linear-gradient(to right, #ffffff0d, #ffffff8c, #ffffff0d);
+		}
+
+		&::after {
+			content: '';
+			position: absolute;
+			top: 1px;
+			left: 50%;
+			width: 0.5px;
+			transform: translateX(-50%);
+			height: 100%;
+			background: linear-gradient(to bottom, #ffffff8c, #ffffff0d);
+		}
+
+		a {
+			color: #ffffffda;
+			line-height: 70px;
+			transition-duration: 0.3s;
+
+			&:hover {
+				color: #18e77c;
 			}
 		}
 	}
