--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,15 +21,15 @@ div[class*='-card'] {
           box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840;
 }
 
-div[class*='-card'] .content .title {
-  color: #ffffffda;
+div[class*='-card'] .card-content .title {
+  color: #ffffffd9;
 }
 
-div[class*='-card'] .content .title h3 {
+div[class*='-card'] .card-content .title h3 {
   line-height: 21px;
 }
 
-div[class*='-card'] .content .title::before {
+div[class*='-card'] .card-content .title::before {
   content: '';
   position: absolute;
   top: 0;
@@ -40,15 +40,26 @@ div[class*='-card'] .content .title::before {
   background: linear-gradient(135deg, #18e77c66, #18e77c1a);
 }
 
-div[class*='-card'] .content .title::after {
+div[class*='-card'] .card-content .title::after {
   content: '';
   position: absolute;
   left: -60px;
   bottom: -15px;
   width: 95%;
   height: 1px;
-  background: -webkit-gradient(linear, left top, right top, from(#ffffff8c), to(transparent));
-  background: linear-gradient(to right, #ffffff8c, transparent);
+  background: -webkit-gradient(linear, left top, right top, from(#ffffff66), color-stop(70%, transparent));
+  background: linear-gradient(to right, #ffffff66 0%, transparent 70%);
+}
+
+div[class*='-card'] .card-content .content::before {
+  content: '';
+  position: absolute;
+  top: -1px;
+  left: -17px;
+  width: 1px;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, from(#ffffff66), color-stop(90%, transparent));
+  background: linear-gradient(to bottom, #ffffff66 0%, transparent 90%);
 }
 
 .modern-arrow {
@@ -57,7 +68,7 @@ div[class*='-card'] .content .title::after {
 
 .modern-arrow, .modern-arrow::before {
   display: inline-block;
-  background: #ffffffda;
+  background: #ffffffd9;
   width: 14px;
   height: 2px;
 }
@@ -219,7 +230,7 @@ div[class*='-card'] .content .title::after {
 }
 
 .home-card .links a {
-  color: #ffffffda;
+  color: #ffffffd9;
   line-height: 70px;
   -webkit-transition-duration: 0.3s;
           transition-duration: 0.3s;
@@ -232,6 +243,42 @@ div[class*='-card'] .content .title::after {
 .home-card .links a:hover .modern-arrow,
 .home-card .links a:hover .modern-arrow::before {
   background: #18e77c;
+}
+
+/*
+	About Card
+*/
+.about-card :last-child {
+  margin-bottom: 0;
+}
+
+.about-card .info li span {
+  color: #ffffffd9;
+}
+
+.about-card .service:last-child::before {
+  display: none;
+}
+
+.about-card .service::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: -16px;
+  width: 100%;
+  height: 1px;
+  background: -webkit-gradient(linear, left top, right top, from(#ffffff66), to(transparent));
+  background: linear-gradient(to right, #ffffff66, transparent);
+}
+
+.about-card .service .icon {
+  color: #18e77c;
+  background: linear-gradient(135deg, #18e77c66, #18e77c1a);
+}
+
+.about-card .service .name {
+  font-size: 13px;
+  color: #ffffffd9;
 }
 
 /*
