--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,9 +25,9 @@ div[class*='-card'] {
 	background: $background-color;
 	box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840;
 
-	.content {
+	.card-content {
 		.title {
-			color: #ffffffda;
+			color: #ffffffd9;
 
 			h3 {
 				line-height: 21px;
@@ -51,8 +51,18 @@ div[class*='-card'] {
 				bottom: -15px;
 				width: 95%;
 				height: 1px;
-				background: linear-gradient(to right, #ffffff8c, transparent);
+				background: linear-gradient(to right, #ffffff66 0%, transparent 70%);
 			}
+		}
+
+		.content::before {
+			content: '';
+			position: absolute;
+			top: -1px;
+			left: -17px;
+			width: 1px;
+			height: 100%;
+			background: linear-gradient(to bottom, #ffffff66 0%, transparent 90%);
 		}
 	}
 }
@@ -63,7 +73,7 @@ div[class*='-card'] {
 	&,
 	&::before {
 		display: inline-block;
-		background: #ffffffda;
+		background: #ffffffd9;
 		width: 14px;
 		height: 2px;
 	}
@@ -224,7 +234,7 @@ div[class*='-card'] {
 		}
 
 		a {
-			color: #ffffffda;
+			color: #ffffffd9;
 			line-height: 70px;
 			transition-duration: 0.3s;
 
@@ -236,6 +246,46 @@ div[class*='-card'] {
 					background: $main-color;
 				}
 			}
+		}
+	}
+}
+
+/*
+	About Card
+*/
+
+.about-card {
+	:last-child{
+		margin-bottom: 0;
+	}
+
+	.info li span {
+		color: #ffffffd9;
+	}
+
+	.service {
+		&:last-child::before{
+			display: none;
+		}
+
+		&::before{
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: -16px;
+			width: 100%;
+			height: 1px;
+			background: linear-gradient(to right, #ffffff66, transparent);
+		}
+
+		.icon {
+			color: $main-color;
+			background: linear-gradient(135deg, #18e77c66, #18e77c1a);
+		}
+
+		.name {
+			font-size: 13px;
+			color: #ffffffd9;
 		}
 	}
 }
