--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,6 +4,11 @@
 /*
 	1. General
 */
+body,
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji' !important;
   font-size: 14px;
