--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,11 +4,6 @@
 /*
 	1. General
 */
-body,
-html {
-  scroll-behavior: smooth;
-}
-
 body {
   font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji' !important;
   font-size: 14px;
@@ -93,7 +88,6 @@ div[class*='-card'] .card-content .content::before {
 	1. Preloader
 */
 .preloader {
-  background: #051118;
   z-index: 1000;
   opacity: 1;
   -webkit-transition-duration: 1s;
@@ -126,25 +120,15 @@ div[class*='-card'] .card-content .content::before {
 .navbar {
   z-index: 900;
   width: calc(100% - 12px);
-  background: #051118;
   -webkit-box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840;
           box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840;
 }
 
 .navbar nav ul li a {
-  font-size: 11px;
-  width: 55px;
+  width: 65px;
   height: 75px;
   -webkit-transition-duration: 0.3s;
           transition-duration: 0.3s;
-}
-
-.navbar nav ul li a:hover {
-  color: #18e77c;
-}
-
-.navbar nav ul li a .icon {
-  font-size: 18px;
 }
 
 /*
@@ -170,10 +154,6 @@ div[class*='-card'] .card-content .content::before {
   height: 125px;
 }
 
-.home-card .profile-image img {
-  border-color: #051118;
-}
-
 .home-card .profile-image::before {
   content: '';
   position: absolute;
@@ -185,29 +165,13 @@ div[class*='-card'] .card-content .content::before {
   background: linear-gradient(135deg, #18e77c66, #18e77c1a);
 }
 
-.home-card .name {
-  color: #ffffffd9;
-}
-
 .home-card .name h1 {
   line-height: 30px;
-}
-
-.home-card .occupation h2 {
-  color: #18e77c;
 }
 
 .home-card .social a {
   -webkit-transition-duration: 0.3s;
           transition-duration: 0.3s;
-}
-
-.home-card .social a:hover {
-  color: #ffffffd9;
-}
-
-.home-card .social a .icon {
-  font-size: 16px;
 }
 
 .home-card .links::before {
@@ -226,7 +190,7 @@ div[class*='-card'] .card-content .content::before {
   position: absolute;
   top: 1px;
   left: 50%;
-  width: 0.5px;
+  width: 1px;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   height: 100%;
@@ -235,7 +199,6 @@ div[class*='-card'] .card-content .content::before {
 }
 
 .home-card .links a {
-  color: #ffffffd9;
   line-height: 70px;
   -webkit-transition-duration: 0.3s;
           transition-duration: 0.3s;
@@ -253,12 +216,12 @@ div[class*='-card'] .card-content .content::before {
 /*
 	About Card
 */
-.about-card :last-child {
-  margin-bottom: 0;
+.about-card .card-content {
+  margin-bottom: 56px;
 }
 
-.about-card .info li span {
-  color: #ffffffd9;
+.about-card :last-child {
+  margin-bottom: 0;
 }
 
 .about-card .service:last-child::before {
@@ -277,13 +240,25 @@ div[class*='-card'] .card-content .content::before {
 }
 
 .about-card .service .icon {
-  color: #18e77c;
   background: linear-gradient(135deg, #18e77c66, #18e77c1a);
 }
 
-.about-card .service .name {
-  font-size: 13px;
-  color: #ffffffd9;
+/*
+	Education Card
+*/
+.education-card .education-item:last-child::before {
+  display: none;
+}
+
+.education-card .education-item::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: -16px;
+  width: 100%;
+  height: 1px;
+  background: -webkit-gradient(linear, left top, right top, from(#ffffff66), to(transparent));
+  background: linear-gradient(to right, #ffffff66, transparent);
 }
 
 /*
