--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,16 +2,9 @@
 	Colors
 */
 
-$background-color: #051118;
-$main-color: #18e77c;
-
 /*
 	1. General
 */
-body,
-html {
-	scroll-behavior: smooth;
-}
 
 body {
 	font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
@@ -21,12 +14,12 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-size-adjust: 100%;
 	color: #ffffff8c;
-	background: hsl(202, 50%, 10%);
+	background: #0d1d26;
 }
 
 div[class*='-card'] {
 	border-radius: 0.25rem;
-	background: $background-color;
+	background: #051118;
 	box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840;
 
 	.card-content {
@@ -98,7 +91,6 @@ div[class*='-card'] {
 */
 
 .preloader {
-	background: $background-color;
 	z-index: 1000;
 	opacity: 1;
 	transition-duration: 1s;
@@ -113,7 +105,7 @@ div[class*='-card'] {
 			height: 100%;
 			border-radius: 50%;
 			opacity: 1;
-			background: $main-color;
+			background: #18e77c;
 			animation: sk-bounce 2s infinite ease-in-out;
 		}
 
@@ -131,23 +123,13 @@ div[class*='-card'] {
 .navbar {
 	z-index: 900;
 	width: calc(100% - 12px);
-	background: $background-color;
 	box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840;
 
 	nav ul li {
 		a {
-			font-size: 11px;
-			width: 55px;
+			width: 65px;
 			height: 75px;
 			transition-duration: 0.3s;
-
-			&:hover {
-				color: $main-color;
-			}
-
-			.icon {
-				font-size: 18px;
-			}
 		}
 	}
 }
@@ -173,10 +155,6 @@ div[class*='-card'] {
 		width: 125px;
 		height: 125px;
 
-		img {
-			border-color: $background-color;
-		}
-
 		&::before {
 			content: '';
 			position: absolute;
@@ -190,29 +168,13 @@ div[class*='-card'] {
 	}
 
 	.name {
-		color: #ffffffd9;
-
 		h1 {
 			line-height: 30px;
 		}
 	}
 
-	.occupation {
-		h2 {
-			color: $main-color;
-		}
-	}
-
 	.social a {
 		transition-duration: 0.3s;
-
-		&:hover {
-			color: #ffffffd9;
-		}
-
-		.icon {
-			font-size: 16px;
-		}
 	}
 
 	.links {
@@ -231,23 +193,22 @@ div[class*='-card'] {
 			position: absolute;
 			top: 1px;
 			left: 50%;
-			width: 0.5px;
+			width: 1px;
 			transform: translateX(-50%);
 			height: 100%;
 			background: linear-gradient(to bottom, #ffffff8c, #ffffff0d);
 		}
 
 		a {
-			color: #ffffffd9;
 			line-height: 70px;
 			transition-duration: 0.3s;
 
 			&:hover {
-				color: $main-color;
+				color: #18e77c;
 
 				.modern-arrow,
 				.modern-arrow::before {
-					background: $main-color;
+					background: #18e77c;
 				}
 			}
 		}
@@ -259,12 +220,12 @@ div[class*='-card'] {
 */
 
 .about-card {
-	:last-child {
-		margin-bottom: 0;
+	.card-content{
+		margin-bottom: 56px;
 	}
 
-	.info li span {
-		color: #ffffffd9;
+	:last-child {
+		margin-bottom: 0;
 	}
 
 	.service {
@@ -283,13 +244,29 @@ div[class*='-card'] {
 		}
 
 		.icon {
-			color: $main-color;
 			background: linear-gradient(135deg, #18e77c66, #18e77c1a);
 		}
+	}
+}
 
-		.name {
-			font-size: 13px;
-			color: #ffffffd9;
+/*
+	Education Card
+*/
+
+.education-card {
+	.education-item {
+		&:last-child::before {
+			display: none;
+		}
+
+		&::before {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: -16px;
+			width: 100%;
+			height: 1px;
+			background: linear-gradient(to right, #ffffff66, transparent);
 		}
 	}
 }
