--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -216,18 +216,10 @@ div[class*='-card'] {
 }
 
 /*
-	About Card
+	Services Card
 */
 
-.about-card {
-	.card-content{
-		margin-bottom: 56px;
-	}
-
-	:last-child {
-		margin-bottom: 0;
-	}
-
+.services-card {
 	.service {
 		&:last-child::before {
 			display: none;
@@ -245,28 +237,6 @@ div[class*='-card'] {
 
 		.icon {
 			background: linear-gradient(135deg, #18e77c66, #18e77c1a);
-		}
-	}
-}
-
-/*
-	Education Card
-*/
-
-.education-card {
-	.education-item {
-		&:last-child::before {
-			display: none;
-		}
-
-		&::before {
-			content: '';
-			position: absolute;
-			bottom: 0;
-			left: -16px;
-			width: 100%;
-			height: 1px;
-			background: linear-gradient(to right, #ffffff66, transparent);
 		}
 	}
 }
