--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,7 +1,4 @@
 /*
-	Colors
-*/
-/*
 	1. General
 */
 body {
@@ -244,6 +241,17 @@ div[class*='-card'] .card-content .content::before {
   -webkit-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
   stroke-dasharray: 245.044 245.044;
+}
+
+/*
+	Contact Card
+*/
+.contact-card .card-content {
+  margin-bottom: 3rem;
+}
+
+.contact-card .card-content:last-child {
+  margin-bottom: 1.5rem;
 }
 
 /*
