--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,21 @@
 	1. General
 */
 
+::-webkit-scrollbar {
+	width: 8px;
+	height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #0d1d26;
+	border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+	background: #0a171f;
+	border-radius: 4px;
+}
+
 body {
 	font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
 		'Apple Color Emoji', 'Segoe UI Emoji' !important;
@@ -14,7 +29,6 @@ body {
 }
 
 div[class*='-card'] {
-	width: 97%;
 	border-radius: 0.25rem;
 	background: #051118;
 	box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840;
@@ -119,7 +133,7 @@ div[class*='-card'] {
 
 .navbar {
 	z-index: 900;
-	width: 97%;
+	width: calc(100% - 12px);
 	transform: translateX(calc(-50% - 6px));
 	box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840;
 
@@ -298,10 +312,10 @@ div[class*='-card'] {
 		}
 	}
 
-	.skills{
-		.content{
-			&:last-child{
-				&::before{
+	.skills {
+		.content {
+			&:last-child {
+				&::before {
 					display: none;
 				}
 			}
@@ -316,15 +330,42 @@ div[class*='-card'] {
 				margin-bottom: 1.5rem;
 			}
 
-			.form-input{
-				&:nth-child(2n){
+			.form-input {
+				&:nth-child(2n) {
 					padding-left: 4px;
 				}
 
-				&:nth-child(2n + 1){
+				&:nth-child(2n + 1) {
 					padding-right: 4px;
 				}
 			}
+		}
+	}
+}
+
+@media (min-width: 870px) {
+	div[class*='-card'] {
+		box-shadow: none;
+	}
+
+	.info {
+		box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840 !important;
+	}
+}
+
+@media (min-width: 1050px) {
+	.home-card {
+		.background-image {
+			height: 50%;
+
+			img {
+				clip-path: polygon(100% 0, 100% 85%, 60% 100%, 0 75%, 0 0);
+			}
+		}
+
+		.profile-image {
+			top: 50%;
+			--tw-translate-y: -50%;
 		}
 	}
 }
