termine de adaptarloa tablets y a pc

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,12 +7,12 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #0d1d26;
+  background: #18e77c;
   border-radius: 4px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #0a171f;
+  background: #0d1d26;
   border-radius: 4px;
 }
 
@@ -297,6 +297,30 @@ div[class*='-card'] .card-content .content::before {
   }
 }
 
+@-webkit-keyframes changeInfoCard {
+  0%,
+  100% {
+    -webkit-transform: translateX(0) translateY(-50%);
+            transform: translateX(0) translateY(-50%);
+  }
+  50% {
+    -webkit-transform: translateX(-100%) translateY(-50%);
+            transform: translateX(-100%) translateY(-50%);
+  }
+}
+
+@keyframes changeInfoCard {
+  0%,
+  100% {
+    -webkit-transform: translateX(0) translateY(-50%);
+            transform: translateX(0) translateY(-50%);
+  }
+  50% {
+    -webkit-transform: translateX(-100%) translateY(-50%);
+            transform: translateX(-100%) translateY(-50%);
+  }
+}
+
 @media (min-width: 512px) {
   .services-card .service::before {
     display: none;
@@ -325,17 +349,47 @@ div[class*='-card'] .card-content .content::before {
 }
 
 @media (min-width: 870px) {
-  div[class*='-card'] {
-    -webkit-box-shadow: none;
-            box-shadow: none;
+  .hid {
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translate(-80px, -41%);
+            transform: translate(-80px, -41%);
+    left: -50%;
+    width: 100%;
+    height: 505px;
+    background: #0d1d26;
+    z-index: 40;
   }
   .info {
     -webkit-box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840 !important;
             box-shadow: 5px 5px 15px #05111880, -5px -5px 15px #05111840 !important;
   }
+  .info.animate {
+    -webkit-animation: changeInfoCard 2s ease-in-out;
+            animation: changeInfoCard 2s ease-in-out;
+  }
+  .info div[class*='-card'] {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    display: none;
+  }
+  .info div[class*='-card'].active {
+    display: block;
+  }
 }
 
 @media (min-width: 1050px) {
+  .hid {
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translate(-50px, -42%);
+            transform: translate(-50px, -42%);
+    left: -50%;
+    width: 100%;
+    height: 85%;
+    background: #0d1d26;
+    z-index: 40;
+  }
   .home-card .background-image {
     height: 50%;
   }
