--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,16 @@
 /*
+	Contents
+	1. General
+	2. Preloader
+	3. Navbar
+	4. Home Card
+	5. Services
+	6. Skills
+	7. Contact
+	8. Animations
+	9. Responsive
+*/
+/*
 	1. General
 */
 ::-webkit-scrollbar {
@@ -97,7 +109,7 @@ div[class*='-card'] .card-content .content::before {
 }
 
 /*
-	1. Preloader
+	2. Preloader
 */
 .preloader {
   z-index: 1000;
@@ -127,7 +139,7 @@ div[class*='-card'] .card-content .content::before {
 }
 
 /*
-    2. Navbar
+    3. Navbar
 */
 .navbar {
   z-index: 900;
@@ -146,7 +158,7 @@ div[class*='-card'] .card-content .content::before {
 }
 
 /*
-	3. Home Card
+	4. Home Card
 */
 .home-card {
   height: 500px;
@@ -159,13 +171,13 @@ div[class*='-card'] .card-content .content::before {
 .home-card .background-image img {
   -webkit-clip-path: polygon(100% 0, 100% 85%, 60% 100%, 0 75%, 0 0);
           clip-path: polygon(100% 0, 100% 85%, 60% 100%, 0 75%, 0 0);
+  -o-object-position: 20% 50%;
+     object-position: 20% 50%;
 }
 
 .home-card .profile-image {
   top: 45%;
   --tw-translate-y: -45%;
-  width: 125px;
-  height: 125px;
 }
 
 .home-card .profile-image::before {
@@ -228,7 +240,7 @@ div[class*='-card'] .card-content .content::before {
 }
 
 /*
-	Services Card
+	5. Services
 */
 .services-card .service:last-child::before {
   display: none;
@@ -250,7 +262,7 @@ div[class*='-card'] .card-content .content::before {
 }
 
 /*
-	Skills
+	6. Skills
 */
 .skills-card .skill-circle .progress-ring__circle {
   -webkit-transform: rotate(-90deg);
@@ -261,7 +273,7 @@ div[class*='-card'] .card-content .content::before {
 }
 
 /*
-	Contact Card
+	7. Contact
 */
 .contact-card .card-content {
   margin-bottom: 3rem;
@@ -272,7 +284,7 @@ div[class*='-card'] .card-content .content::before {
 }
 
 /*
-	*. Animations
+	8. Animations
 */
 @-webkit-keyframes sk-bounce {
   0%,
@@ -321,6 +333,9 @@ div[class*='-card'] .card-content .content::before {
   }
 }
 
+/*
+	9. Responsive
+*/
 @media (min-width: 512px) {
   .services-card .service::before {
     display: none;
